--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "doc": "jsdoc -c ./jsdoc_conf.json"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "vue": "^2.5.16",
-    "serve-static": "latest"
+    "serve-static": "latest",
+    "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
     "@vue/cli-service": "^3.0.0-beta.10",
     "@vue/eslint-config-prettier": "^3.0.0-beta.10",
+    "jsdoc": "^3.5.5",
+    "jsdoc-vue": "^1.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.16"
   },
   "babel": {
     "presets": [
