--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "morgan": "^1.9.0",
     "serve-static": "latest",
     "vue": "^2.5.16"
   },
